Update: agent orchestration system with verifier and solver agents